css-fixes for mobile fordi greiene drev å brakk seg når man så på mindre skjermer, overflow og sånne stygge ting

--- a/src/components/ActivitySummary.module.css
+++ b/src/components/ActivitySummary.module.css
@@ -1,36 +1,32 @@
-.container {
-    display: grid;
-    grid-auto-flow: row;
-    justify-items: center;
+.summary {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    padding: 0;
+    row-gap: 0.5rem;
+    column-gap: 0.5rem;
+    align-content: center;
 }
 
-.dayGrid {
-    display: grid;
-    grid-template-columns: 3rem 3rem 3rem 3rem 3rem 3rem 3rem;
-    gap: 1rem 0;
-    justify-items: center;
+.summary > h4 {
+    text-align: center;
 }
 
-.activityGridButton {
-    width: 2.5rem;
-    height: 2.5rem;
-    border-style: solid;
+.summaryLine {
+    max-width: 25rem;
+    display: flex;
+    justify-content: space-between;
     border-radius: 50vh;
-    margin: 0.3rem 0.3rem 0.3rem 0.3rem;
-    padding: 0.3rem 0.3rem 0.3rem 0.5rem;
+    padding: 0.7rem;
     font-weight: bold;
-    cursor: pointer;
+    text-align: center;
 }
 
-.activityTypeButton {
-    width: 10rem;
-    border-style: solid;
-    border-radius: 50vh;
-    margin: 0.3rem 10rem 0.3rem 0.3rem;
-    padding: 0.3rem 0.3rem 0.3rem 0.5rem;
-    font-weight: bold;
-    cursor: pointer;
+.summaryLine > * {
+    justify-content: space-between;
 }
+
+
 
 .none {
     border-color: var(--a-grayalpha-200);
@@ -55,10 +51,6 @@
 .vacation {
     border-color: var(--a-green-200);
     background-color: var(--a-green-200)
-}
-
-.selected {
-    border-color: black;
 }
 
 .workHours {
